currentDraft/userStyle2.css
@import "fonts.css";


body {
    font-family: 'Poppins', sans-serif;
    background: #fafafa;
    overflow-y: hidden;
}

p {
    font-family: 'Poppins', sans-serif;
    font-size: .85em;
    font-weight: 300;
    margin-bottom: 0px;
}

a, a:hover, a:focus {
    color: inherit;
    text-decoration: none;
    transition: all 0.3s;
}

#locnav{
    position: fixed;
}

#salespanel{
    padding: 2px 2px;
    margin-top: 30px;
    margin-left: 0px;
}


#salestable{
    width: calc(100% - 210px);
    margin-top: -22px;
    margin-left: -12px;

}

.navbar {
    width: 100%;
    padding: 5px 5px;
    background: #fff;
    border: none;
    border-radius: 0;
    box-shadow: 1px 2px 3px rgba(0, 0, 0, 0.1);
}

.navbar-brand{
    padding: 15px;
}

.nav-item{
    padding: 8px;
}

.navbar-btn {
    box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.1);
    outline: none !important;
    border: none;
}

.line {
    width: 100%;
    height: 1px;
    border-bottom: 1px solid #ddd;
    margin-bottom: 20px;
}

#payline {
    width: 100%;
    height: 1px;
    border-bottom: 1px solid;
    margin-bottom: 20px;
    margin-top: 20px;
}

#navline {
    margin-top: 5px;
    margin-bottom: 5px;
    width: 95%;
    height: 1px;
    border-bottom: 1px solid white;
    opacity: 25%;
    box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.1);
}


.card-deck{
    margin-top: 30px;
    padding: 20px;
}

/* ---------------------------------------------------
    Sidebar
----------------------------------------------------- */

#sidebar {
    width: 250px;
    position: fixed;
    top: 0;
    left: 0;
    height: 100vh;
    z-index: 999;
    background: #016923; 
    color: #fff;
    transition: all 0.3s;
}

#sidebar.active {
    margin-left: -250px;
}

#sidebar .sidebar-header {
    padding-left: 20px;
    height: 4.5em;
    box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.1);
}

#sidebar ul.components {
    padding: 20px 0;
    margin: auto;
    width: 95%;
}

#sidebar ul p {
    color: #fff;
    padding: 10px;
    box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.1);
}

#sidebar ul li a {
    padding: 10px;
    font-size: 1.1em;
    display: block;
}
#sidebar ul li a:hover {
    color: #000000;
    background: #ffffff ;
    opacity: 60%;
    border-radius: 5px;
}

#sidebar ul li.active > a, a[aria-expanded="true"] {
    color: #fff;
    background: #009933;
    margin: auto;
    width: 97%;
    border-radius: 5px;
}

#usercard{
    background: #01551d;
    border-radius: 5px;
}

#pagecard{
    box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.1);
    width: 10rem;
}

a[data-toggle="collapse"] {
    position: relative;
}

.dropdown-toggle::after {
    display: block;
    position: absolute;
    top: 50%;
    right: 20px;
    transform: translateY(-50%);
}

a[aria-expanded="false"]::before, a[aria-expanded="true"]::before {
    content: '\e259';
    display: block;
    position: absolute;
    right: 20px;
    font-family: 'Glyphicons Halflings';
    font-size: 0.6em;
}
a[aria-expanded="true"]::before {
    content: '\e260';
}

ul.CTAs {
    padding: 20px;
}

ul.CTAs a {
    text-align: center;
    font-size: 0.9em !important;
    display: block;
    border-radius: 5px;
    margin-bottom: 5px;
}

ul ul a {
    font-size: 0.9em !important;
    padding-left: 30px !important;
    background: #00802bab;
}

a.article, a.article:hover {
    background: #00802bc4 !important;
    color: #fff !important;
}




/* ---------------------------------------------------
    Payment Bar
----------------------------------------------------- */

#paymentbar {
    width: 250px;
    position: fixed;
    top: 70;
    right: 0;
    height: 100vh;
    z-index: 999;
    background: #fafafa;
    margin-top: 30px;
    border: 1px solid rgb(189, 189, 189);
    border-top: none;
    border-radius: 5px;
    box-shadow: 2px 2px 3px rgba(0, 0, 0, 0.1);
}

#paymentbar ul li {
    padding: 8px;
    font-size: 1.1em;
}

#paybtn{
    padding-left: 20px;
    padding-right: 20px;
}
/* ---------------------------------------------------
    Content Page
----------------------------------------------------- */
#content {
    width: calc(100% - 250px);
    margin-top: 40px;
    min-height: 100vh;
    transition: all 0.3s;
    position: absolute;
    top: 0;
    right: 0;
    overflow: hidden;
}

#controlscreen{
    margin-left:30px
}

#salescontent{
    width: calc(100% - 250px);
}

#content.active {
    width: 100%;
}

#formscreen{
    margin-top: 40px;
    left: 200px;
    
}
#tablescreen{
    margin-top: 30px;
    left: 150px;
    
}

/* ---------------------------------------------------
    Media devices
----------------------------------------------------- */
@media (max-width: 768px) {
    #sidebar {
        margin-left: -250px;
    }
    #sidebar.active {
        margin-left: 0;
    }
    #content {
        width: 100%;
    }
    #content.active {
        width: calc(100% - 250px);
    }
    #sidebarCollapse span {
        display: none;
    }
}

